--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,11 +1,11 @@
-\section{Acknowledgements} 
-\label{sec:acknowledgements}
+\chapter{Acknowledgements} 
+\label{ch:acknowledgements}
 
 I would like to thank a number of people who've been instrumental in the development of this thesis as well as my own development along the way.
 
-My supervisor Dr. Marian Ursu for providing focus by asking the right questions every time again.
+My supervisor Dr. Marian Ursu for providing focus, support and inspiration by asking the right questions every time again.
 
-Prof. Mark Bishop for leading the programme, guiding us far and wide across different ideas in cognitive science, always with enthusiasm and personal attention.
+Prof. Mark Bishop for leading the programme, guiding us far and wide along different ideas in cognitive science, always with enthusiasm and personal attention.
 
 `her Smallness' Lucia for her never-ending positive support during the structuring of our ideas.
 
@@ -15,6 +15,6 @@ The people together with whom we made `Picnic' an inclusive, friendly and safe l
 
 Simone for being a truly nourishing host and dear partner in life and crime during my stay in beautiful Rennes les Baines, where much foundational work for this research was done.
 
-Jan and Pim for bringing out the best in me, no matter how many kilometers our friendship spans.
+Jan and Pim for bringing out the best in me, no matter how many kilometres our friendship spans.
 
 Goldsmiths with her unconventional Department of Computing for having me experience the creative side of Computer Science and letting me merge my passions for AI and video.
