--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -4,4 +4,13 @@
 
 This section introduces the problem of visual information overload, hints at current methods to solve the problem and indicates why they are not satisfactory for the wide domain of user generated video content that accounts for unprecedented amounts of data and traffic on the web. The idea of human computation is introduced and hinted to as a possible solution. The particular problem of filtering segmented video parts based on interest is introduced.
 
- 
+% visual content needs interpretation
+Since the increase of bandwidth and connectivity to the web as well as proliferation of online tools and platforms to share content online, much of the web's content is visual. In contrast to textual data that is symbolic and machine readable, the meaning of visual content resides mostly in sensory data (such as sound and visuals). Sensory data needs to be interpreted and thus needs advanced techniques from fields like computer vision and machine learning to process the data.
+
+% difficult
+
+% for video especially this is a large problem, because of the temporal nature of the medium. Capturing aspect of how a video develops over time is computationally costly and still very time consuming.
+
+% Wide domain: user generated video content
+
+% benefit of video is that there are already millions of people interacting in online systems. 
